k8s/app1/deploymen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: poc-sensedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: 577125335739.dkr.ecr.us-east-1.amazonaws.com/app1:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
