k8s/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: poc-sensedia
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
